rearranged the whole module such that the processor is isolated, both greyson and more generic procedure based variants exist